# fish-tool

./: README.md  meson.build  meson.options
code/: meson.build
code/logic/: app.c  main.c  meson.build
code/logic/fossil/: app.h  common.h
code/media/: input3.txt  input4.txt  input5.txt  meson.build
code/tests/: meson.build
code/tests/cases/: test_unittest.c  test_unittest.cpp
subprojects/: fossil-io.wrap  fossil-lib.wrap
